Photo de Profil Vivien 19/10

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=05c3d92753a18dc0bf48849d4959e36d
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
